force-app/main/default/objects/Equipment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipName
  >Equipment</relationshipName>
</CustomField>