force-app/main/default/objects/Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <label>Equipment Type</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>HVAC</fullName></value><value><fullName>Generator</fullName></value><value><fullName>Compressor</fullName></value><value><fullName>Pump</fullName></value><value><fullName>Motor</fullName></value><value><fullName>Electrical</fullName></value><value><fullName>Plumbing</fullName></value><value><fullName>Other</fullName></value></valueSetDefinition></valueSet>
</CustomField>