force-app/main/default/objects/Equipment__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Text</type>
    <length>100</length>
</CustomField>