force-app/main/default/objects/Equipment__c/fields/Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Site_Address__c</fullName>
    <label>Site Address</label>
    <type>Text</type>
    <length>255</length>
</CustomField>