force-app/main/default/objects/Equipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Active</fullName><default>true</default></value><value><fullName>Inactive</fullName></value><value><fullName>Decommissioned</fullName></value></valueSetDefinition></valueSet>
</CustomField>