force-app/main/default/objects/Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Equipment_ID__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Manufacturer__c</columns>
    <columns>Model__c</columns>
    <columns>Last_Service_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Equipment</label>
</ListView>